catkin_ws/logs/backend/build.make.523.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘bool SLAM::Mapping::featureDetectionAndExtraction()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:370:47: error: expected primary-expression before ‘<<’ token
   cout << currentFrame.getKeypoints().size(); << " keypoints detected" << endl;
                                               ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
